@@ -1,3 +1,13 @@
+Wed Nov  3 12:10:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/CCM_DataReader.cpp:
+        * connectors/dds4ccm/impl/CCM_DataWriter.cpp:
+          Implemented several methods
+
+        * connectors/dds4ccm/impl/opendds:
+        * connectors/dds4ccm/impl/splice:
+          Removed these files.
+
 Wed Nov  3 11:02:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/CCM_DataReader.cpp:
